<resources>
    <string name="app_name">EVENTI</string>
    <string name="facebook_app_id" translatable="false">835820619855102</string>
    <string name="server_client_id" translatable="false">902703939267-5apqh4qdilfbg80b752lv1dvvt7jta0u.apps.googleusercontent.com</string>
    <string name="interstitial_full_screen_ad_unit_id" translatable="false">ca-app-pub-1241381799711971/7368641640</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1241381799711971/1908387241</string>

    <string name="transition_event_image" translatable="false">transitionEventImage</string>
    <string name="version_">Version: %s</string>

    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="event_is_saved">Event is saved</string>
    <string name="event_is_removed">"Event is removed</string>
    <string name="undo">UNDO</string>
    <string name="choose_dates">Choose dates</string>
    <string name="events">Events</string>
    <string name="places">Places</string>
    <string name="saved">Saved</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="no_internet_connection_cached_events">No internet connection. Showing cached events …</string>
    <string name="date">DATE</string>
    <string name="location">LOCATION</string>
    <string name="event_details">EVENT DETAILS</string>
    <string name="promo_message">Find something attractive</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="about_eventi">About EVENTI</string>
    <string name="developed_by_team2">Developed by Team2</string>
    <string name="pull_to_refresh">Pull to fetch data</string>
    <string name="about">About</string>

    <string name="showcase_welcome_message">Welcome to EVENTI</string>
    <string name="showcase_toolbar_message">Filter, calendar and map options are in the toolbar menu</string>
    <string name="showcase_events_message">Active events are ordered by their start time</string>
    <string name="showcase_categories_message">Categories of currently active events</string>
    <string name="showcase_saved_message">Your saved events</string>
    <string name="showcase_places_message">Places tab contains places from expired and active events(on the right end)</string>

    <string name="filter">Filter…</string>
    <string name="today">Today </string>
    <string name="attending">Attending: %s</string>
    <string name="fetching_events">Fetching events…</string>
    <string name="fetching_places">Fetching places…</string>
    <string name="updating_now">Updating now</string>
    <string name="last_updated">Last updated: %s</string>

    <string name="upcoming_event_reminder">Upcoming event reminder</string>
    <string name="saved_event_starts_today">Saved events for today</string>
    <string name="categories">Categories</string>
    <string name="category_fun">Fun</string>
    <string name="category_cinema">Cinema</string>
    <string name="category_culture">Culture</string>
    <string name="category_festival">Festival</string>
    <string name="category_promotion">Promotion</string>
    <string name="category_sport">Sport</string>
    <string name="category_fair">Fair</string>
    <string name="category_education">Education</string>
    <string name="category_concerts">Concerts</string>
    <string name="category_other">Other</string>
    <string name="map_needs_permission">Map needs your permission. Allow it?</string>

    <string name="soon">Soon…</string>
    <string name="gps_network_not_enabled_title">Locations not enabled</string>
    <string name="gps_network_not_enabled_message">Location is required for the maps functionality to work optimal. Enable it now?</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="cancel">Cancel</string>
    <string name="loading_data">Loading data …</string>
    <string name="translating_text">Translating text…</string>

    <plurals name="number_of_saved_events">
        <item quantity="one">%d saved event</item>
        <item quantity="other">%d saved events</item>
    </plurals>

</resources>
