<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:orderInCategory="2"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="3"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

</menu>