<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

         <!--TODO in settings: when-to-notify,-->
        <!--<item-->
            <!--android:id="@+id/settings"-->
            <!--android:checked="false"-->
            <!--android:icon="@drawable/ic_dashboard"-->
            <!--android:title="Settings" />-->

        <!--<item-->
            <!--android:id="@+id/social"-->
            <!--android:checked="false"-->
            <!--android:icon="@android:drawable/star_big_off"-->
            <!--android:title="Social" />-->

        <item
            android:id="@+id/calendar"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/map"
            android:checked="false"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/map" />

        <!-- TODO Archived events -->

        <item
            android:id="@+id/about"
            android:checked="false"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about" />

    </group>

</menu>