<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:theme="@style/Widget.CardContent.EventDetails.Title" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/item_event_text_padding"
                        android:paddingRight="@dimen/item_event_text_padding"
                        android:paddingTop="@dimen/item_event_text_padding"
                        android:stretchColumns="1"
                        android:theme="@style/Widget.CardContent.EventDetails">

                        <TableRow>

                            <TextView
                                android:paddingRight="5dp"
                                android:text="@string/start" />

                            <TextView
                                android:id="@+id/event_details_start_date"
                                android:singleLine="true"
                                android:text="31.10.2015 20:00" />

                        </TableRow>

                        <TableRow>

                            <TextView
                                android:paddingRight="5dp"
                                android:text="@string/end" />

                            <TextView
                                android:id="@+id/event_details_end_date"
                                android:singleLine="true"
                                android:text="31.10.2015 22:00" />
                            <!--"-->
                        </TableRow>

                    </TableLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:theme="@style/Widget.CardContent.EventDetails.Title" />

                    <TextView
                        android:id="@+id/event_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Infinity, Skopje, Macedonia"
                        android:theme="@style/Widget.CardContent.EventDetails.Content" />

                    <fragment
                        android:id="@+id/event_detail_map"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginTop="@dimen/item_event_text_padding" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_details"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:theme="@style/Widget.CardContent.EventDetails.Title" />

                    <TextView
                        android:id="@+id/event_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:text="Details for the current jsonEvent lorum ipsos kratos Details for
                        the current jsonEvent lorum ipsos kratos Details for the current jsonEvent lorum
                        ipsos kratos Details for the current jsonEvent lorum ipsos kratos Details for
                        the current jsonEvent lorum ipsos kratos "
                        android:theme="@style/Widget.CardContent.EventDetails.Content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_to_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>